_includes/styles.scss
@import "variables.scss";
@import "//fonts.googleapis.com/css?family=Six+Caps|Open+Sans:400italic,800italic,400,600,800";
$baseurl: "{{ site.baseurl }}";

$bodyFont: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
$headerFont: "Six Caps", sans-serif;
$defaultMargin: 1.5rem;

$headerColor: white;
$bodyColor: #171717;

body {
  font-family: $bodyFont;
  margin: 0 $defaultMargin;
}
a:visited,
a,
a:hover,
.btn {
  color: $bodyColor;
}
.btn,
.btn:hover {
  border-color: $bodyColor;
}
.btn:hover {
  background: #00968824;
}
.btn.active,
.btn:active {
  background: $bodyColor;
  border-color: $bodyColor;
}

.blog-header {
  margin: 0 (-$defaultMargin) $defaultMargin;
  .breadcrumb {
    padding-left: $defaultMargin;
    a {
      color: $headerColor;
    }
  }

  h1 {
    font-family: $headerFont;
    font-size: 80px;
    color: $headerColor;
    overflow: hidden;
    text-overflow: clip;
  }

  p {
    font-style: italic;
  }

  .hero {
    background: url($baseurl + "/assets/images/banner.png") no-repeat right;
    background-size: auto 100%;
    background-color: #171717;
  }
}

.blog-content {
  line-height: 1.6;
  margin: 0px auto;
  max-width: 650px;
  .panel {
    border: none;
  }
}

.blog-post-header {
  margin-bottom: $defaultMargin;
}
.blog-post-content {
  margin: 0px auto;
  max-width: 80ch;
  text-align: justify;
}
.blog-post-title {
  margin-bottom: 0rem;
  text-transform: capitalize;
}

.blog-post-subtitle {
  font-style: italic;
}

// social media icons
a.lab,
i.lab {
  font-size: 48px;
}

// youtube embed based on https://embedresponsively.com/
.embed-container {
  position: relative;
  padding-bottom: 56.25%;
  height: 0;
  overflow: hidden;
  max-width: 100%;
}
.embed-container iframe,
.embed-container object,
.embed-container embed {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.column h2 {
  color: lightgrey;
  font-family: $headerFont;
  font-size: 68px;
}

@media only screen and (max-width: 400px) {
  .blog-header .hero {
    background-position: center;
  }
  h1 {
    font-size: 64px;
  }
  .column {
    margin-bottom: 2rem;
    h2 {
      font-size: 34px;
    }
    &:first-of-type {
      order: 2;
    }
  }
}

@each $affinity, $color in $affinities {
  .has-#{$affinity}-affinity {
    color: $color;
  }
}

